# GPU-RayTracer

./: .gitignore  CMakeLists.txt  README.md  dragon.txt  rayTrace_compute.glsl
data/: bottle-nolabel.txt  dragon.txt  piano_stage.txt  plant-h.txt  rayTrace_compute.glsl
include/: PGA_3D.h  bvh.h  config.h  multivector.h  structs.h
src/: bvh.cpp  raytraceGUI.cpp
